<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="@drawable/kenya2">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:textColor="#eb260c"
        android:textSize="25sp"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="16dp"/>

    <ImageView
        android:id="@+id/logoImageView"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:src="@drawable/kenya_flag"
        android:layout_marginTop="0dp"
        android:contentDescription="@string/logo"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/male"
        android:textSize="16sp"
        android:textStyle="italic|bold"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="16dp"/>

    <Button
        android:id="@+id/bif"
        android:layout_width="229dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:shadowColor="@color/material_dynamic_neutral_variant95"
        android:text="@string/male" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/female"
        android:textSize="16sp"
        android:textStyle="italic|bold"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="16dp"/>

    <Button
        android:id="@+id/gif"
        android:layout_width="235dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="0dp"
        android:text="@string/female" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gays"
        android:textSize="16sp"
        android:textStyle="italic|bold"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="16dp"/>

    <Button
        android:id="@+id/they"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="0dp"
        android:text="@string/gays" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</LinearLayout>